--- a/2024_YR4/parallel-obj_2024_YR4-orbit_60-enc_246358909.conf
+++ b/2024_YR4/parallel-obj_2024_YR4-orbit_60-enc_246358909.conf
@@ -1,1 +1,1 @@
-name=generic;Nast=1000;obj_id=2024_YR4;orbit_id=60;enc_id=0;ntask=5
+name=crontab;Nast=1000;obj_id=2024_YR4;orbit_id=60;enc_id=latest;ntask=0
